kubernetes-acm/base/todo_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todofrontend-deployment
  labels:
    app: todofrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todofrontend
  template:
    metadata:
      labels:
        app: todofrontend
    spec:
      containers:
        - name: todofrontend
          image: melmanmankiewicz/todo_frontend:7.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todofrontend-service
spec:
  selector:
    app: todofrontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
