kubernetes-acm/base/todo_frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todofrontend-route
spec:
  path: /
  to:
    kind: Service
    name: todofrontend-service
  port:
    targetPort: 3000
